[gd_scene load_steps=2 format=3 uid="uid://ckp7hrauw3e6q"]

[ext_resource type="Script" path="res://scripts/MultiplayerController.gd" id="1_rrgx6"]

[node name="TestMultiplayerScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rrgx6")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 62.0
offset_right = 293.0
offset_bottom = 165.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 214.0
offset_right = 299.0
offset_bottom = 317.0
text = "Join"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 373.0
offset_top = 135.0
offset_right = 576.0
offset_bottom = 233.0
text = "Start"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 365.0
offset_right = 540.0
offset_bottom = 474.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 404.0
offset_right = 123.0
offset_bottom = 434.0
text = "Name"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
